Sync projects branch with current local version